0029477: Visualization, TKOpenGl - MSAA FBO initialization failure on OpenGL ES 3.2 device

OpenGl_View::myFboColorFormat now initialized using sized texture format GL_RGBA8
on mobile platforms (as in case of desktop platform).